# PTOAS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  _ptoas_build_backend.py  pyproject.toml  quick_install.sh  set_ptoas_env.sh
lib/Bindings/Python/: CMakeLists.txt  PTOModule.cpp
lib/PTO/IR/: CMakeLists.txt  PTO.cpp  PTOAttrs.cpp  PTOTypeDefs.cpp  PTOTypeUtils.cpp  VPTO.cpp
lib/PTO/Transforms/: AllocToPointerCast.cpp  CMakeLists.txt  CppPostprocess.cpp  ExpandTileOp.cpp  FoldTileBufIntrinsics.cpp  InferPTOLayout.cpp  PTOA5NormalizeTMovPass.cpp  PTOCanonicalizeIR.cpp  PTOInferVPTOVecScope.cpp  PTOInferValidatePipeInitPass.cpp  PTOInstantiateAndInlineOpLib.cpp  PTOLowerFrontendPipeOpsPass.cpp  PTOLowerToOpLibCalls.cpp  PTOLowerToOpLibCalls.h  PTOMaterializeTileHandles.cpp  PTONormalizeUncoveredTileSections.cpp  PTOPlanMemory.cpp  PTOPlanMemory.h  PTOResolveReservedBuffersPass.cpp  PTOToEmitC.cpp  PTOToVPTOLowering.cpp  PTOUnrollSIMTForPass.cpp  PTOVPTOExpandBridgeOps.cpp  PTOVPTOPtrBoundary.cpp  PTOValidateIntToPtrUses.cpp  PTOValidateVPTOIR.cpp  PTOVerifySubkernelPipeContractPass.cpp  PTOViewToMemref.cpp  VPTOBufferMaterialization.cpp  VPTOCANN900LLVMEmitter.cpp  VPTOExpandWrapperOps.cpp  VPTOLLVMEmitter.cpp  VPTOLLVMEmitterDispatcher.cpp  VPTOLLVMEmitterHelper.cpp  VPTONormalizeContainer.cpp  VPTOPtrCastCleanup.cpp  VPTOPtrNormalize.cpp  VPTOSplitCVModule.cpp
lib/PTO/Transforms/BufidSync/: BufidSyncAnalysis.cpp  BufidSyncAnalysis.h  BufidSyncCodegen.cpp  BufidSyncCodegen.h  BufidSyncIdAlloc.cpp  BufidSyncIdAlloc.h  BufidSyncPass.cpp
lib/PTO/Transforms/GraphSyncSolver/: MemInfo.cpp  SyncSolver.cpp  SyncSolverIRTranslator.cpp
lib/PTO/Transforms/InsertSync/: PTOIRTranslator.cpp  PTOInsertSync.cpp  SyncEventIdAllocation.cpp  SyncMacroModel.cpp
lib/PTO/Transforms/TileFusion/: FusionAnalysis.cpp  FusionCostModel.cpp  FusionOpSemantics.cpp  PTOFlattenFusionRegion.cpp  PTOFusionLoadStoreElision.cpp  PTOFusionPlan.cpp  PTOFusionPredicateElision.cpp  PTOFusionRegionGen.cpp  PTOLowLevelLoopFusion.cpp  PTOMarkLastUse.cpp  PTOOpScheduling.cpp  PTOPreFusionAnalysis.cpp  PTOPrintPreFusionAnalysis.cpp  PTOPropagateFusionLoopAttrs.cpp  VfCostModel.cpp
ptodsl/: README.md  ptodsl_utils.py  pyproject.toml  tile_and_vpto_builder_highlevel.py  tile_and_vpto_builder_lowlevel.py
ptodsl/docs/user_guide/: 01-introduction.md  02-quick-start.md  03-kernel-entry-and-subkernels.md  04-type-system-and-buffer.md  05-control-flow.md  06-scalar-and-pointer-ops.md  07-data-movement-ops.md  08-compute-operations.md  09-predicate-and-mask-ops.md  10-sync-ops.md  11-flash-attention-walkthrough.md  12-additional-examples.md  13-simt-micro-ops.md
ptodsl/examples/: dynamic_softmax_launch.py  fa_dn_matmul.py  fa_dn_ptodsl.py  fast_hadamard_launch.py  fast_inverse_dense_launch.py  flash_attention_sketch.py  flash_attention_softmax_launch.py  inverse_block_inversion_launch.py  mixed_backend_kernel_module.py  softmax_dsl.py  softmax_lowlevel.py  tadd_dsl.py  tadd_launch.py  tadd_lowlevel.py  tilelang_codegen.py  topk_launch.py
ptodsl/examples/flash_attention/: flash_attention_cv_split.py  flash_attention_vf_fusion.py  gu.py  softmax.py
ptodsl/ptodsl/: __init__.py  _ast_rewrite.py  _bootstrap.py  _control_flow.py  _diagnostics.py  _host_tensors.py  _jit.py  _kernel_compilation.py  _kernel_signature.py  _ops.py  _pipe_namespace.py  _runtime_index_ops.py  _runtime_scalar_ops.py  _scalar_adaptation.py  _scalar_coercion.py  _subkernels.py  _surface_types.py  _surface_values.py  _tensor_factories.py  _tile_namespace.py  _tile_template_tracing.py  _types.py  pto.py  scalar.py
ptodsl/ptodsl/_runtime/: __init__.py  cache.py  codegen.py  launch.py  native_build.py  toolchain.py
ptodsl/ptodsl/_tracing/: __init__.py  active.py  artifacts.py  control_flow.py  module_builder.py  runtime.py  session.py
ptodsl/tests/: CMakeLists.txt  README.md  test_ast_rewrite_example_ir.py  test_docs_as_test.py  test_flash_attention_demo_compile.py  test_jit_compile.py  test_jit_diagnostics.py  test_pipe_surface_sample_compile.py  test_ptoas_frontend_verify.py  test_subkernel_diagnostics.py  test_vector_cube_ops.py
ptodsl/tests/support/: docs_fragment_fixtures.py
tilelang-dsl/: CMakeLists.txt  README.md
tilelang-dsl/docs/: README.md  matcher-and-advanced-surface-migration.md  unsupported-features.md  v1-lowering.md  v1-surface.md
tilelang-dsl/docs/user_guide/: 01-introduction.md  02-quick-start.md  03-kernel-declaration.md  04-template-kernels.md  05-type-system.md  06-control-flow.md  06-tensorview.md  07-frontend-operations.md  07-tile-types.md  08-control-flow.md  08-sync-dma-operations.md  09-frontend-operations.md  09-vector-memory-operations.md  10-predicate-operations.md  10-sync-dma-operations.md  11-vector-arithmetic-operations.md  11-vector-memory-operations.md  12-cube-operations.md  12-predicate-operations.md  13-examples.md  13-vector-arithmetic-operations.md  14-common-errors.md  14-examples.md  16-compatibility-notes.md  17-next-steps.md
tilelang-dsl/docs/vpto_spec/: vpto-spec-current.md  vpto-spec-v0.2.md  vpto-spec-v0.3.md
tilelang-dsl/examples/: README.md  tadd_demo.py  v1_elementwise_tail_demo.py  v1_emit_mlir_demo.py  v1_tadd_implicit_vecscope_demo.py  v1_tbinop_2d_nopostupdate_demo.py  v1_template_slot_multiop_demo.py  v1_verify_smoke.py
tilelang-dsl/python/: README.md
tilelang-dsl/python/tilelang_dsl/: __init__.py  backend_validator.py  daemon.py  daemon_client.py  daemon_core.py  daemon_helper.py  daemon_server.py  env_config.py  expand_helper.py  frontend_ast.py  kernel.py  lowering.py  lowering_backend.py  pybind_renderer.py  semantic.py  stable_key.py  support_matrix.py  types.py
tilelang-dsl/skills/auto-update-vpto-spec/: SKILL.md
tilelang-dsl/tests/: README.md  conftest.py  import_tilelang_dsl.py  simple_verify.py  test_tilelang_dsl_v1.py  verify_issue_237.py
tilelang-dsl/tests/backend/: __init__.py  test_backend_validator.py  test_e2e_pybind_backend.py  test_lowering_backend.py
tools/ptobc/tests/: CMakeLists.txt  tci_trowexpandadd_tmp_v0_encode.sh
(+3882 files in other folders)
