# pyproject.toml - Project metadata
#
# Build flow (requires LLVM already built):
#   pip install .
#
# This will:
#   1. CMake configure + Ninja build + install
#   2. Package Python bindings into a wheel via docker/create_wheel.sh
#
# Environment variables (all optional):
#   LLVM_BUILD_DIR               Path to LLVM build dir
#                                (default: /llvm-workspace/llvm-project/build-shared)
#   PTO_BUILD_DIR                Path to PTOAS build dir (default: <repo>/build)
#   PTO_INSTALL_DIR              Install prefix (default: <repo>/install)
#   PTOAS_PYTHON_PACKAGE_VERSION Wheel version override

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "_ptoas_build_backend"
backend-path = ["."]

[project]
name = "ptoas"
version = "0.1.0"
description = "PTO Assembler & Optimizer"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
