[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptodsl"
version = "0.1.0"
description = "PTO MLIR DSL – Pythonic JIT-compiler-style IR builder for the PTO dialect"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["ptodsl*"]
